# skylake-proto

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/modules/: SkylakeProtoOptions.cmake
cmake/presets/: qa_presets.json
src/: CMakeLists.txt
src/include/: skl_proto.hpp
src/include/skl_proto/: endpoint.hpp  packet.hpp  send.hpp
test/: CMakeLists.txt
workbench/: CMakeLists.txt
